# iris-esmf-regrid

./: .cirrus.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  codecov.yml  conda-lock.yml  greetings.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ---custom-issue.md  --feature-request.md  bug-report.md
.github/workflows/: benchmark.yml  ci-benchmarks-validate.yml  ci-citation.yml  ci-manifest.cifileworking  ci-manifest.yml  ci-template-check.yml  ci-tests.yml  ci-wheels.yml  greetings.yml  refresh-lockfiles.yml  stale.yml
benchmarks/: README.md  _asv_delegated_abc.py  asv.conf.json  asv_delegated.py  asv_delegated_conda.py  bm_runner.py  nox_asv.conf.yaml  nox_asv_plugin.py
benchmarks/benchmarks/: __init__.py  generate_data.py
benchmarks/benchmarks/ci/: __init__.py  esmf_regridder.py
benchmarks/benchmarks/esmf_regridder/: __init__.py  scalability.py
benchmarks/benchmarks/generate_data/: __init__.py  cubes.py
benchmarks/benchmarks/long/: __init__.py  esmf_regridder.py
benchmarks/custom_bms/: README.md  install.py  tracemallocbench.py
docs/src/: CHANGELOG.md  Makefile  conf.py  index.rst  installing.rst
docs/src/developers_guide/: index.rst
docs/src/userguide/: examples.rst  index.rst  scheme_comparison.rst  tutorials.rst
docs/src/whatsnew/: index.rst  latest.rst  latest.rst.template  spelling_allow.txt
esmf_regrid/: __init__.py  _constants.py  _esmf_sdo.py  _grid.py  constants.py  esmf_regridder.py  schemes.py
esmf_regrid/demos/: mint_comparison.py  new_src.nc  new_tgt.nc  orig_src.nc  orig_tgt.nc  u_result.nc  u_result_r.nc  u_src.nc  u_tgt.nc  v_result.nc  v_result_r.nc  v_src.nc  v_tgt.nc
esmf_regrid/experimental/: __init__.py  io.py  partition.py  unstructured_regrid.py  unstructured_scheme.py  util.py
esmf_regrid/tests/: __init__.py  conftest.py  test_GridInfo.py
esmf_regrid/tests/integration/esmf_regridder/: __init__.py  test_Regridder.py
esmf_regrid/tests/integration/experimental/: __init__.py
esmf_regrid/tests/integration/experimental/unstructured_scheme/: __init__.py  test_regrid_unstructured_to_rectilinear.py
esmf_regrid/tests/results/test_GridInfo/: small_grid.txt
esmf_regrid/tests/results/unit/esmf_regridder/test_GridInfo/: small_grid.txt
esmf_regrid/tests/results/unit/experimental/unstructured_regrid/test_MeshInfo/: small_mesh.txt
esmf_regrid/tests/unit/_esmf_sdo/: __init__.py  test_GridInfo.py  test_RefinedGridInfo.py
esmf_regrid/tests/unit/esmf_regridder/: __init__.py  test_Constants.py  test_GridInfo.py  test_Regridder.py  test_constants.py
esmf_regrid/tests/unit/experimental/: __init__.py
esmf_regrid/tests/unit/experimental/io/: __init__.py  test_load_regridder.py  test_round_tripping.py  test_save_regridder.py
esmf_regrid/tests/unit/experimental/unstructured_regrid/: __init__.py  test_MeshInfo.py
esmf_regrid/tests/unit/experimental/unstructured_scheme/: __init__.py  test_GridToMeshESMFRegridder.py  test_MeshToGridESMFRegridder.py  test__create_cube.py  test__cube_to_GridInfo.py  test__mesh_to_MeshInfo.py  test__regrid_unstructured_to_rectilinear__prepare.py  test_cube_to_GridInfo.py  test_mesh_to_MeshInfo.py  test_regrid_rectilinear_to_unstructured.py  test_regrid_unstructured_to_rectilinear.py  test_regrid_unstructured_to_unstructured.py
esmf_regrid/tests/unit/experimental/unstuctured_regrid/: test_MeshInfo.py
esmf_regrid/tests/unit/schemes/: __init__.py  _common_regridder.py  _common_scheme.py  test_ESMFAreaWeighted.py  test_ESMFAreaWeightedRegridder.py  test_ESMFBilinear.py  test_ESMFBilinearRegridder.py  test_ESMFNearest.py  test_ESMFNearestRegridder.py  test__ESMFRegridder.py  test__cube_to_GridInfo.py  test__mesh_to_MeshInfo.py  test__regrid_unstructured_to_rectilinear__prepare.py  test_regrid_rectilinear_to_rectilinear.py
iris-esmf-regrid/: __init__.py  _esmf_regridder.py
requirements/: core.txt  py310.yml  py311.yml  py312.yml  py313.yml  py314.yml  py36.yml  py37.yml  py38.yml  py39.yml  pypi-core.txt  pypi-optional-dev.txt  pypi-optional-docs.txt
src/esmf_regrid/: __init__.py  _deprecation.py  _deprecations.py  _esmf_sdo.py  constants.py  esmf_regridder.py  schemes.py  util.py
src/esmf_regrid/experimental/: _partial.py  io.py  partition.py  unstructured_scheme.py
src/esmf_regrid/tests/integration/: __init__.py
src/esmf_regrid/tests/integration/esmf_regridder/: test_Regridder.py
src/esmf_regrid/tests/integration/experimental/unstructured_scheme/: test_regrid_unstructured_to_rectilinear.py
src/esmf_regrid/tests/integration/schemes/: __init__.py  test_dask_schedulers.py
src/esmf_regrid/tests/results/unit/_esmf_sdo/test_GridInfo/: small_grid.txt
src/esmf_regrid/tests/results/unit/experimental/unstructured_regrid/test_MeshInfo/: small_mesh.txt
src/esmf_regrid/tests/unit/_esmf_sdo/: test_GridInfo.py  test_RefinedGridInfo.py
src/esmf_regrid/tests/unit/esmf_regridder/: test_Constants.py  test_Regridder.py
src/esmf_regrid/tests/unit/experimental/io/: test_round_tripping.py  test_save_regridder.py  v0.9_regridder.nc
src/esmf_regrid/tests/unit/experimental/io/partition/: __init__.py  test_PartialRegridder.py  test_Partition.py
src/esmf_regrid/tests/unit/experimental/partition/: test_PartialRegridder.py  test_Partition.py
src/esmf_regrid/tests/unit/experimental/unstructured_regrid/: test_MeshInfo.py
src/esmf_regrid/tests/unit/experimental/unstructured_scheme/: test_MeshToGridESMFRegridder.py
src/esmf_regrid/tests/unit/schemes/: __init__.py  test_ESMFAreaWeighted.py  test_ESMFBilinear.py  test_ESMFBilinearRegridder.py  test_ESMFNearest.py  test_ESMFNearestRegridder.py  test__create_cube.py  test__mesh_to_MeshInfo.py  test__regrid_unstructured_to_rectilinear__prepare.py  test_regrid_rectilinear_to_rectilinear.py
src/esmf_regrid/tests/unit/util/: __init__.py  test_find_area.py
