[metadata]
author = SciTools
author_email = scitools-iris-dev@googlegroups.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Atmospheric Science
description = Iris regridding scheme using ESMF
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    esmf
    regrid
license = BSD 3-Clause License
license_file = LICENSE
name = esmf_regrid
project_urls =
    Code = https://github.com/SciTools-incubator/iris-esmf-regrid
    Issues = https://github.com/SciTools-incubator/iris-esmf-regrid/issues
url = https://github.com/SciTools-incubator/iris-esmf-regrid
version = attr: esmf_regrid.__version__

[options]
packages = find:
python_requires =
    >=3.7,<3.9
setup_requires =
    setuptools>=40.8.0
zip_safe = False

[tool:pytest]
testpaths =
    esmf_regrid/
addopts =
    -ra
    -v
    --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER
